k8s/evergreen.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evergreen
  namespace: evergreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evergreen
  template:
    metadata:
      labels:
        app: evergreen
    spec:
      containers:
        - name: evergreen
          image: evergreen
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: evergreen
  namespace: evergreen
spec:
  selector:
    app: evergreen
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP # 使用 ClusterIP，通过 Ingress 暴露服务
